    [#] ObjectDynamicPropertyBrowser will now list properties in alphabetical order.
    [#] ObjectDynamicPropertyBrowser will now resize columns to their contents when in TreeBrowser mode.
    [#] Sorting of file names is not case sensitive anymore in Observer models.
    [#] AbstractTreeItem::setIcon() will now remove the icon property if passed an invalid icon.

    [*] Fixed CodeEditorWidget not initializing its display flags in its constructor.
    [*] Fixed setting of active subjects when FollowSelection hint is used and parent node is selected in ObserverWidget.
    [*] Fixed some "QFSFileEngine::open: No file name specified" messages in CodeEditorWidget.
    [*] Fixed problems with category filtering in TableView mode ObserverWidget when using custom hints.
    [*] Fixed problems with category filtering of actions in action providers.
    [*] Fixed bug where in some cases TreeFileItem::setFilePath() did not set if the item had a relative to path properly.
    [*] Fixed LoggerConfigWidget not sorting the log table automatically when the log engine count changes.
    [*] Fixed CodeEditorWidget::saveFile() not saving a file when it does not exist already.
    [*] Fixed CodeEditorWidget::saveFile() not saving to a file if the file does not exist already.
    [*] Observer models now validates qti_prop_SIZE_HINT before using it.
    [*] Fixed bug in ObserverTreeModelProxyFilter::filterAcceptsRow() where it filtered the complete tree most of the time.
    [*] Fixed possible crash in ObjectPropertyBrowser::setObject() and ObjectDynamicPropertyBrowser::setObject() when passed an invalid object.
    [*] Fixed bug in ObserverTreeModel where subject drops onto categories did not work if the subject
        did not already have a Qtilities category property on it.
    [*] Fixed bug in ObjectDynamicPropertyBrowser where it did not show properties with unsupported types.

    ============================
    QtilitiesExtensionSystem:
    ============================